...

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="planMyRoute">Plan My Route</string>
    <string name="myRoute">My Route</string>
    <string name="ddotRoutesTitle">Ddot Bus Route</string>
    <string name="smartRoutesTitle">Smart Bus Route</string>
    <string name="reflexRoutesTitle">Fast Bus Route</string>
    <string name="peopleMoverTitle">Detroit People Mover</string>

    <string name="navHomeString">Home</string>
    <string name="navPlannerString">Plan My Route</string>
    <string name="navDdot">DDOT Bus</string>
    <string name="navSmart">Smart Bus</string>
    <string name="navReflex">Fast Bus</string>
    <string name="navPeopleMover">Detroit People Mover</string>
    <string name="navQline">Qline</string>
    <string name="navRouteMap">Route Map</string>

    <string name="RouteMapTitle">Routes</string>

    <string name="planner">planner</string>
    <string name="routes">routes</string>
    <string name="routeDetails">routeDetails</string>
...
